feat: add lottery casino animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <div id="countdown-display"></div>
-
+    <div id="welcome-container">
+        <h1>정늠인의 초성 게임</h1>
+        <img id="logo" src="logo.png"/>
+        <button id="start-btn">게임 시작</button>
+      </div>
     <div id="game-container">
         <h1>정늠인의 초성 게임</h1>
         <div id="quiz-area"></div>
@@ -26,7 +30,7 @@
     <div id="result-display" style="display: none;"></div>
     <div id="gift-lottery-display"></div>
 
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
